// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`arbitrary groups > group case 0 1`] = `
".mx-auto {
    margin-left: auto;
    margin-right: auto
}
.block {
    display: block
}
.flex {
    display: flex
}
.h-6 {
    height: 1.5rem
}
.w-6 {
    width: 1.5rem
}
.max-w-xs {
    max-width: 20rem
}
.items-center {
    align-items: center
}
.space-x-3 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-x-reverse: 0;
    margin-right: calc(0.75rem * var(--tw-space-x-reverse));
    margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)))
}
.space-y-3 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-y-reverse: 0;
    margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(0.75rem * var(--tw-space-y-reverse))
}
.rounded-lg {
    border-radius: 0.5rem
}
.bg-white {
    --tw-bg-opacity: 1;
    background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1))
}
.stroke-sky-500 {
    stroke: #0ea5e9
}
.p-6 {
    padding: 1.5rem
}
.text-sm {
    font-size: 0.875rem;
    line-height: 1.25rem
}
.font-semibold {
    font-weight: 600
}
.text-slate-500 {
    --tw-text-opacity: 1;
    color: rgb(100 116 139 / var(--tw-text-opacity, 1))
}
.text-slate-900 {
    --tw-text-opacity: 1;
    color: rgb(15 23 42 / var(--tw-text-opacity, 1))
}
.shadow-lg {
    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
}
.ring-1 {
    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
}
.ring-slate-900\\/5 {
    --tw-ring-color: rgb(15 23 42 / 0.05)
}
.hover\\:bg-sky-500:hover {
    --tw-bg-opacity: 1;
    background-color: rgb(14 165 233 / var(--tw-bg-opacity, 1))
}
.hover\\:ring-sky-500:hover {
    --tw-ring-opacity: 1;
    --tw-ring-color: rgb(14 165 233 / var(--tw-ring-opacity, 1))
}
.group:hover .group-hover\\:stroke-white {
    stroke: #fff
}
.group:hover .group-hover\\:text-white {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity, 1))
}"
`;

exports[`arbitrary groups > group case 1 1`] = `
".invisible {
    visibility: hidden
}
.hover\\:bg-slate-100:hover {
    --tw-bg-opacity: 1;
    background-color: rgb(241 245 249 / var(--tw-bg-opacity, 1))
}
.hover\\:bg-slate-200:hover {
    --tw-bg-opacity: 1;
    background-color: rgb(226 232 240 / var(--tw-bg-opacity, 1))
}
.group\\/item:hover .group-hover\\/item\\:visible {
    visibility: visible
}
.group\\/edit:hover .group-hover\\/edit\\:translate-x-0\\.5 {
    --tw-translate-x: 0.125rem;
    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
}
.group\\/edit:hover .group-hover\\/edit\\:text-gray-700 {
    --tw-text-opacity: 1;
    color: rgb(55 65 81 / var(--tw-text-opacity, 1))
}
.group\\/edit:hover .group-hover\\/edit\\:text-slate-500 {
    --tw-text-opacity: 1;
    color: rgb(100 116 139 / var(--tw-text-opacity, 1))
}"
`;

exports[`arbitrary groups > group case 2 1`] = `
".hidden {
    display: none
}
.group.is-published .group-\\[\\.is-published\\]\\:block {
    display: block
}"
`;

exports[`arbitrary groups > group case 3 1`] = `
":nth-of-type(3) .group .group-\\[\\:nth-of-type\\(3\\)_\\&\\]\\:block {
    display: block
}"
`;

exports[`arbitrary groups > peer case 0 1`] = `
".invisible {
    visibility: hidden
}
.mt-2 {
    margin-top: 0.5rem
}
.block {
    display: block
}
.text-sm {
    font-size: 0.875rem;
    line-height: 1.25rem
}
.font-medium {
    font-weight: 500
}
.text-pink-600 {
    --tw-text-opacity: 1;
    color: rgb(219 39 119 / var(--tw-text-opacity, 1))
}
.text-slate-700 {
    --tw-text-opacity: 1;
    color: rgb(51 65 85 / var(--tw-text-opacity, 1))
}
.peer:invalid ~ .peer-invalid\\:visible {
    visibility: visible
}"
`;

exports[`arbitrary groups > peer case 1 1`] = `
".visible {
    visibility: visible
}
.hidden {
    display: none
}
.peer\\/draft:checked ~ .peer-checked\\/draft\\:block {
    display: block
}
.peer\\/published:checked ~ .peer-checked\\/published\\:block {
    display: block
}
.peer\\/draft:checked ~ .peer-checked\\/draft\\:text-sky-500 {
    --tw-text-opacity: 1;
    color: rgb(14 165 233 / var(--tw-text-opacity, 1))
}
.peer\\/published:checked ~ .peer-checked\\/published\\:text-sky-500 {
    --tw-text-opacity: 1;
    color: rgb(14 165 233 / var(--tw-text-opacity, 1))
}"
`;

exports[`arbitrary groups > peer case 2 1`] = `
".hidden {
    display: none
}
.peer.is-dirty:required ~ .peer-\\[\\.is-dirty\\]\\:peer-required\\:block {
    display: block
}"
`;
